@@ -5,6 +5,7 @@ require 'active_merchant/billing/integrations/chronopay'
 require 'active_merchant/billing/integrations/paypal'
 require 'active_merchant/billing/integrations/nochex'
 require 'active_merchant/billing/integrations/gestpay'
+require 'active_merchant/billing/integrations/two_checkout'
 
 # make the bogus gateway be classified correctly by the inflector
 Inflector.inflections do |inflect|
